# turbopuffer_fs_poc

./: .gitignore  AGENTS.md  README.md  SPEC.tpfs.md  TPFS_DEMO.md  __init__.py  demo.sh  fs.py  ingest.py  live.py  package.json  paths.py  pnpm-lock.yaml  post.py  pyproject.toml  runtime.py  schema.py  tpfs.py  tsconfig.base.json
.hypothesis/constants/: 0bdeddb394b38177  341df3d664208e4c  5098be5fa8815f6e  531fa524502a0324  5678e06059bcb788  68e4a8ee63cbddb8  6cc51a52346decab  8cedf131d0b8e622  99ab1088688597af  bbba33d3e9155883  cb67f682e4395a0c
.hypothesis/examples/04e6b3400353b141/: 50b95742b11ada91
.hypothesis/examples/50b95742b11ada91/: 02d3232bf1380ebb  a1205ed29e73f04f
examples/task-bundles/code-maintenance-v1/: TASK.md  bundle.json
examples/task-bundles/code-maintenance-v1/data/: sample.csv
examples/task-bundles/csv-analysis-v1/: TASK.md  bundle.json
examples/task-bundles/csv-analysis-v1/data/: transactions.csv
examples/task-bundles/csv-cleaning-v1/: TASK.md  bundle.json
python_implementation/: TPFS_DEMO.md  demo.sh  tpfs.py  tpfs_bash.ts
src/turbopuffer_fs/: __init__.py  checks.py  cli.py  dogfood.py  fs.py  ingest.py  live.py  paths.py  post.py  runtime.py  schema.py  workspace.py
src/turbopuffer_fs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  fakes.py  test_bundle_support.py  test_cli.py  test_dogfood_live.py  test_dogfood_model.py  test_fs_plans.py  test_ingest.py  test_live_tpuf.py  test_paths.py  test_post_and_live.py  test_runtime.py  test_workspace.py
(+4 files in other folders)
